samples/_failures_safe/1761492074_f7059e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a7d01f34.c: In function ‘main’:
./samples/SAFE/__tmp_a7d01f34.c:160:23: error: missing terminating " character
  160 |         fprintf(file, "2024-01-15
      |                       ^~~~~~~~~~~
./samples/SAFE/__tmp_a7d01f34.c:160:9: error: expected expression at end of input
  160 |         fprintf(file, "2024-01-15
      |         ^~~~~~~
./samples/SAFE/__tmp_a7d01f34.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a7d01f34.c:160:9: error: expected declaration or statement at end of input
